<resources>
    <string name="app_name">История в улицах</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">История в улицах</string>
    <string name="nav_header_subtitle">Добро пожаловать в приложение!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">О проекте</string>
    <string name="ablukov">Александр Аблуков\n
    18 декабря 1921 года - 11 февраля 1964 года\n\n

    Родился 18 декабря 1921 года в Астрахани. Вскоре его родители перебрались на новое место жительства в Ульяновск. Детство Саши было трудным и безрадостным. Один за другим умерли его родители и в 1934 году его определили в Ивановский детский дом, что недалеко от Ульяновска.

    Перед войной Александр окончил ФЗУ в городе Куйбышеве и на одном из заводов стал работать слесарем-наладчиком. Вскоре подошло время призыва в армию. С апреля 1941 года Александр Аблуков — рядовой Красной Армии. Война для него началась ранним утром 22 июня 1941 года.

    Старший сержант, командир противотанкового орудия Александр Аблуков свой солдатский долг выполнял честно. Первое боевое крещение принял он на берегу Днестра. Это был самый трудный, самый драматичный период в истории Великой Отечественной. С боями наши войска вынуждены были отступать.

    Летом 1942 года А. Аблуков воевал на Северо-Кавказском направлении, принимал участие в освобождении городов Моздок, Ставрополь, Тихорецк, сражался за освобождение от немцев Кубани.

    В 1943 году Александр узнал о подвиге совершенном его другом Александром Матросовым, с которым судьба свела его в Ивановском детском доме. С горечью Александр узнал о гибели школьного товарища, но сердце переполняла гордость за подвиг, который тот совершил.

    Летом 1944 года полк, в котором сражался А. Аблуков, подошел к Бугу.

    В боях на реке Висла орудие Аблукова уничтожило фашистский дзот, огонь которого сдерживал продвижение наших войск. Противотанковое орудие, которым командовал Аблуков, наводило ужас на гитлеровских захватчиков. За тот бой, в котором был подбит вражеский «тигр», Аблуков получил свой первый солдатский орден — орден Славы 3-ей степени.

    Война полыхала в Европе, бои шли уже на территории Польши. В одном из боев на улицах Познани Аблуков увидел как внезапно появившийся «фердинанд» (немецкое самоходное орудие) стал вести прицельный огонь по нашим бойцам. Орудие Аблукова получило серьезное повреждение. В тяжелейшей обстановке Александр не только сумел сохранить боевой расчет, но и ночью восстановить поврежденное орудие, которое снова стреляло по фашистским танкам.

    23 февраля 1945 года Александру Аблукову был вручен орден Славы 2-й степени. В апреле 1945 года бои разгорелись в немецком городе Фюрстенвальде. Здесь, на улицах немецкого городка, произошел у Александра поединок с немецким противотанковым орудием. Реакция нашего бойца была молниеносной, и орудие было уничтожено, но в одном из боев Аблуков был дважды ранен. Второе ранение оказалось тяжелым, и его отправили в госпиталь. Но подвиг его не остался незамеченным, и он был награжден орденом Славы 1 -й степени. Так, в последние дни войны Александр Аблуков стал полным кавалером ордена Славы.

    После войны A.M. Аблуков более 15 лет проработал на ульяновском автозаводе, везде был первым: на производстве, на отдыхе, на общественной работе. Организовал литературный кружок, руководил выпуском рукописного журнала. Нелепая случайность 11 февраля 1964 года оборвала его жизнь.
    </string>
    <string name="alashaev">Юрий Алашеев\n
	17 октября 1923 - 21 декабря 1959\n\n

Сложно рассказать о Юрии Тимофеевиче лучше, чем это сделал когда-то историк и краевед Сергей Матвеевич Кончев. В 1996 году в газете «Вперёд» вышло несколько его публикаций, посвящённых Герою Советского Союза Юрию Алашееву.

«Одним из крупнейших достижений советской науки в послевоенное время явилось создание скоростного реактивного самолета ТУ-104. Академику А. Н. Туполеву была присуждена за него Ленинская премия. Испытывал этот самолёт и дал ему путёвку в жизнь наш земляк, Герой Советского Союза Юрий Тимофеевич Алашеев. Им было установлено 11 мировых рекордов на туполевских самолётах.

Мне хочется поподробнее рассказать о нашем выдающемся земляке. В своё время о нём была написана книга «След на земле», автор В. Бендерова. Теперь это произведение стало библиографической редкостью.

Родился Ю. Т. Алашеев в семье паровозного машиниста. В семье было девять детей: семь сыновей и две дочери. Юрий был последним ребёнком в семье. На улице Красных Бойцов стоит дом № 8, это дом Алашеевых, добротный, крепкий, под железной крышей.

Говорят, по дому, по воротам судят о хозяине. Отец Юрия, Тимофей Яковлевич, любил всё делать на совесть, просто не терпел неаккуратности… Выросший в бедности, он мечтал видеть своих детей счастливыми. По-разному сложились их судьбы, но почти каждый начинал свой трудовой путь с железнодорожного депо, где работал отец. Старший сын Илья стал работать в депо токарем, а потом по комсомольской путёвке поступил на рабфак, окончил институт. Стал руководителем завода железнодорожного машиностроения в Москве. Вслед за ним в депо пошли работать Пётр, Иван, Александр и другие сыновья. Дети учились, покидали родительский дом. Писали письма из Астрахани, Москвы, Куйбышева, Одессы. Николай стал офицером Советской армии.

Юрий Алашеев 21 июня 1941 года с отличием окончил среднюю школу № 1 г. Инзы. Сразу же после выпускного вечера десятиклассники отправились на Юловское озеро. Радовались, смеялись, мечтали о будущей жизни. У каждого была своя цель, заветная, высокая. О войне узнали только вечером, когда вернулись домой.

Четверых выпускников инзенской средней школы № 1 – Юрия Алашеева, Бориса Малышева, Бориса Волкова, Валентина Ковеленова – райвоенкомат направил в Саранск, в военно-морскую лётную школу. Юрий и там учился отлично. Первым стал летать самостоятельно. Участвовал в художественной самодеятельности, играл в футбол, шахматы. Пользовался огромным авторитетом среди друзей и преподавателей.

Училище из Саранска перевели в Алатырь, затем в Ардатов, Киров. Курсанты ходили в караул, в наряд, обслуживали самолёты, грузили дрова, выполняли другие хозяйственные работы. Борис Волков, который был вместе с Юрием в одной лётной группе, в своём письме в родную школу писал: «Помню, после тяжелейшей разгрузки эшелона с дровами нас, голодных и мокрых, холодной осенью привели в какой-то клуб ожидать обеда. Все были уставшие. Настроение наихудшее. Юри

й присел около рояля, начал играть, и вот постепенно все сгрудились около него, стали петь популярные тогда «Катюшу», «Синий платочек», «В тесной печурке» и другие. Усталости как не бывало. Все просили Юрия играть ещё и ещё».

В августе 1942 года Юрия направили в истребительскую школу. Он стремился на фронт, подавал рапорты с просьбой отправить в действующую армию. Но ему отказывали, считали, что он нужен в училище в должности инструктора по лётной подготовке. Командование училища направило его на учёбу в академию имени Жуковского. Однако вышло так, что вместо неё Юрий поехал учиться в школу лётчиков-испытателей, которую окончил в 1950 году. Учился высшему пилотажу у выдающихся лётчиков страны.

За все годы работы в городе Жуковском на лётно-доводочной базе Юрий Алашеев испытал десятки военных и пассажирских самолётов. В 1955 году Алашеев привёл на авиационный парад в Тушино первый советский реактивный пассажирский самолет ТУ-104.

В газете «Комсомольская правда» от 7 сентября 1957 года специальный корреспондент В. Бендерова в статье «ТУ-104 идёт на рекорд» пишет: «Николай Васильевич Лашкевич, бывалый испытатель, утверждает полётный лист. Самая большая в истории авиации тяжесть поднимается над землёй на самую большую высоту. С грузом 20 тонн на высоту 11 тысяч метров. За штурвалами - Юрий Тимофеевич Алашеев и Валентин Федорович Ковалёв. Это лётчик Алашеев испытывал опытный образец ТУ-104, вёл его в первый полёт на Лондон. Сегодня ему предстоит сложная задача – посадить самолёт с необычным огромным грузом… Гигантский корабль плывёт над советской землёй – плод труда, вдохновения, любви советского человека».

Испытания самолета ТУ-104, которые провёл Юрий, дали возможность внедрить его в гражданскую авиацию. Юрий обучал первые экипажи для этого самолёта. За испытания ТУ-104 Ю. Т. Алашеев был награждён орденом Ленина. Затем он испытывал самолет ТУ-114.

21 декабря 1959 года Юрий Тимофеевич вместе со штурманом Иваном Гавриленко и бортрадистом Константином Щербаковым должен был впервые испытывать новый реактивный бомбардировщик ТУ-022. Вдруг внезапный удар: что-то случилось с двигателем. Тяжёлая машина затряслась и пошла в штопор. Командир дал команду: «Покинуть самолёт!» Живым приземлился только радист. Во время катапультирования погиб штурман. Командир корабля Юрий Алашеев остался в машине, пытаясь посадить её.

Похоронили Юрия на кладбище в Жуковском. На траурном митинге выступил А. Н. Туполев. На похоронах были мать, отец, родные, близкие, друзья по работе. В числе присутствующих находился одноклассник Юрия Борис Георгиевич Волков, заслуженный пилот СССР. Посмертно Ю. Т. Алашееву было присвоено звание Героя Советского Союза.

Вся жизнь его была беспрерывным подвигом, битвой за самые светлые, чистые идеалы. В подтверждение приведу отрывки из его писем: «Ненавижу застой в жизни. Покоя не хочу, не ищу и тебе не дам… Я жажду всё обнять, сжать в объятиях и небо, и землю, разом осушить до дна чашу жизни, пусть она и неистощима, как мир, как огонь, как свет и солнце… Хочу быть лучше, чище, выше».</string>
    <string name="menu_home">Карта</string>
    <string name="menu_gallery">Улицы</string>
    <string name="menu_slideshow">О проекте</string>
    <string name="TextView11">История в улицах</string>
    <string name="TextView22">Версия: 1.0.0</string>
    <string name="TextView33">Описание приложения...</string>
    <string name="TextView44">Почта: Historyinthestreets@yandex.ru</string>
    <string name="social_link_text">Tg: https://t.me/v_kurse_info \nVk: https://vk.com/v_kurse_info</string>
    <string name="TextView66">Авторское право на MapKit принадлежит \n© 2024 Yandex
     \nИспользуется Yandex MapKit 4.5.1-lite</string>
    <string name="TextView77">Политика Конфиденциальности \nНаше приложение не собирает и не хранит никаких личных данных пользователей. Все функции приложения доступны без необходимости предоставления личной информации.</string>
    <string name="TextView88">
    Мы хотим выразить свою благодарность всем, кто помогал нам в создании этого приложения. \nОсобая благодарность:\n\n
    - Нашим разработчикам и дизайнерам за их труд и творчество.\n
    - Нашим бета-тестерам за их ценные отзывы и предложения.\n
    - Всем пользователям за поддержку и полезные отзывы, которые помогли улучшить это приложение.\n
    - [Имя компании или организации], за предоставленные ресурсы и поддержку.\n
    - Использование MapKit, лицензированное под MapKit SDK, Yandex.
    </string>
    <string name="TextView99">О разработчиках \nЭтот проект является результатом совместной работы двух студентов-программистов и одного талантливого дизайнера из УлГТУ. Стремясь сочетать техническое мастерство с эстетической изящностью, мы создали это приложение в рамках учебной программы, чтобы исследовать возможности современных технологий и предложить пользователям нечто уникальное и инновационное. Мы гордимся тем, что можем поделиться нашим творением и надеемся, что оно вам понравится.</string>
    <string name="TextView10">Часто задаваемые вопросы \n1. Что делать, если я столкнулся с проблемой? \nЕсли у вас возникли проблемы, пожалуйста, обратитесь в нашу службу поддержки, написав на почту приложения. \n2. Если у меня есть вопросы, куда мне обратиться? \n Чтобы  "Связаться с нами" напишите нам на почту приложения.</string>
    <string name="formagoogle">Тест</string>
    <string name="newshistorys">Новости</string>
</resources>