<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tophistoryapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.tophistoryapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.tophistoryapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_fourth_tab"
        android:name="com.example.tophistoryapp.ui.fouthtab.FourthTabFragment"
        android:label="@string/formagoogle"
        tools:layout="@layout/fragment_fourth_tab" />
    <fragment
        android:id="@+id/nav_fifth_tab"
        android:name="com.example.tophistoryapp.ui.fivetabus.FivetabFragment"
        android:label="@string/newshistorys"
        tools:layout="@layout/fragment_fifth_tab" />
</navigation>